Add some more spell check entries

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "Deque",
         "Deserialization",
         "Deserializes",
+        "MSRV",
+        "Milli",
         "NANOS",
         "accu",
         "btreemap",
@@ -40,5 +42,5 @@
         "markdown",
         "rust",
         "toml"
-    ]
+    ],
 }
