Make use of nightly features to improve the documentation on docs.rs
* Add doc_cfg annotations
* Generate links to definitions on the src pages.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,3 +86,11 @@ required-features = ["macros"]
 
 [package.metadata.docs.rs]
 all-features = true
+rustdoc-args = [
+    # Enable doc_cfg showing the required features.
+    "--cfg=docsrs",
+    # Generate links to definition in rustdoc source code pages
+    # https://github.com/rust-lang/rust/pull/84176
+    "-Zunstable-options", "--generate-link-to-definition"
+]
+
