--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,7 +83,6 @@ jobs:
         # It is good to test more than the MSRV and stable since sometimes
         # breakage occurs in intermediate versions.
         rust: ["1.46", "1.50", "stable", "beta", "nightly"]
-        features: ["--no-default-features", "", "--all-features"]
         crate: ["serde_with", "serde_with_macros", "serde_with_test"]
     runs-on: ${{ matrix.os }}
     steps:
@@ -97,36 +96,62 @@ jobs:
 
       # Build the project
       - uses: actions-rs/cargo@v1
-        name: "Build (${{ matrix.os }} / ${{ matrix.rust }} / Feat ${{ matrix.features }} / Crate ${{ matrix.crate }})"
+        name: "Build (${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
         if: matrix.rust != 'nightly'
         with:
           command: build
-          args: ${{ matrix.features }} --all-targets --manifest-path=${{ matrix.crate }}/Cargo.toml
+          args: --all-features --all-targets --manifest-path=${{ matrix.crate }}/Cargo.toml
       - uses: actions-rs/cargo@v1
-        name: "Build (${{ matrix.os }} / ${{ matrix.rust }} / Feat ${{ matrix.features }} / Crate ${{ matrix.crate }})"
+        name: "Build (${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
         if: matrix.rust == 'nightly'
         with:
           command: build
           # https://github.com/rust-lang/cargo/issues/8088 for unstable-options
-          args: ${{ matrix.features }} --all-targets --manifest-path=${{ matrix.crate }}/Cargo.toml -Zunstable-options -Zfeatures=dev_dep,host_dep
+          args: --all-features --all-targets --manifest-path=${{ matrix.crate }}/Cargo.toml -Zunstable-options -Zfeatures=dev_dep,host_dep
 
       # The tests are split into build and run steps, to see the time impact of each
       # cargo test --all-targets does NOT run doctests
       # since doctests are important this should not be added
       # https://github.com/rust-lang/cargo/issues/6669
       - uses: actions-rs/cargo@v1
-        name: "Test Build (${{ matrix.os }} / ${{ matrix.rust }} / Feat ${{ matrix.features }} / Crate ${{ matrix.crate }})"
+        name: "Test Build (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
         with:
           command: test
           # We need to specify the manifest path, such that cargo knows where to apply the `no-default-features`.
           # This is no longer necessary for Rust 1.51 or resolver="2"
           # https://doc.rust-lang.org/nightly/cargo/reference/features.html#resolver-version-2-command-line-flags
-          args: ${{ matrix.features }} --no-run --manifest-path=${{ matrix.crate }}/Cargo.toml
+          args: --no-default-features --no-run --manifest-path=${{ matrix.crate }}/Cargo.toml
       - uses: actions-rs/cargo@v1
-        name: "Test Run (${{ matrix.os }} / ${{ matrix.rust }} / Feat ${{ matrix.features }} / Crate ${{ matrix.crate }})"
+        name: "Test Run (No Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
         with:
           command: test
-          args: ${{ matrix.features }} --no-fail-fast --manifest-path=${{ matrix.crate }}/Cargo.toml
+          args: --no-default-features --no-fail-fast --manifest-path=${{ matrix.crate }}/Cargo.toml
+      - uses: actions-rs/cargo@v1
+        name: "Test Build (Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+        with:
+          command: test
+          # We need to specify the manifest path, such that cargo knows where to apply the `no-default-features`.
+          # This is no longer necessary for Rust 1.51 or resolver="2"
+          # https://doc.rust-lang.org/nightly/cargo/reference/features.html#resolver-version-2-command-line-flags
+          args: --no-run --manifest-path=${{ matrix.crate }}/Cargo.toml
+      - uses: actions-rs/cargo@v1
+        name: "Test Run (Default Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+        with:
+          command: test
+          args: --no-fail-fast --manifest-path=${{ matrix.crate }}/Cargo.toml
+      - uses: actions-rs/cargo@v1
+        name: "Test Build (All Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+        with:
+          command: test
+          # We need to specify the manifest path, such that cargo knows where to apply the `no-default-features`.
+          # This is no longer necessary for Rust 1.51 or resolver="2"
+          # https://doc.rust-lang.org/nightly/cargo/reference/features.html#resolver-version-2-command-line-flags
+          args: --all-features  --no-run --manifest-path=${{ matrix.crate }}/Cargo.toml
+      - uses: actions-rs/cargo@v1
+        name: "Test Run (All Features / ${{ matrix.os }} / ${{ matrix.rust }} / Crate ${{ matrix.crate }})"
+        with:
+          command: test
+          args: --all-features --no-default-features --no-fail-fast --manifest-path=${{ matrix.crate }}/Cargo.toml
 
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
