Specify the MSRV in the Cargo.toml
This will be stabilized with Rust 1.56, see
* https://github.com/rust-lang/rust/issues/65262
* https://github.com/rust-lang/cargo/pull/9732

For older cargo versions, this will print a warning, but will not fail
the build/check/test.

--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -6,6 +6,7 @@ authors = [
 ]
 name = "serde_with"
 version = "1.10.0"
+rust-version = "1.46"
 
 categories = ["encoding"]
 description = "Custom de/serialization functions for Rust's serde"
