--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,7 +82,8 @@ jobs:
         os: ["ubuntu-latest", "windows-latest"]
         # It is good to test more than the MSRV and stable since sometimes
         # breakage occurs in intermediate versions.
-        rust: ["1.46", "1.50", "stable", "beta", "nightly"]
+        # IMPORTANT: Synchronize the MSRV with the Cargo.toml values.
+        rust: ["1.46", "1.50", "1.55", "stable", "beta", "nightly"]
         crate: ["serde_with", "serde_with_macros", "serde_with_test"]
     runs-on: ${{ matrix.os }}
     steps:
