--- a/serde_with_test/Cargo.toml
+++ b/serde_with_test/Cargo.toml
@@ -3,6 +3,7 @@ edition = "2018"
 name = "serde_with_test"
 publish = false
 version = "0.0.0"
+rust-version = "1.46"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
