--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -26,28 +26,47 @@ maintenance = {status = "actively-developed"}
 [features]
 default = ["std", "macros"]
 
-alloc = ["serde/alloc", "base64_crate?/alloc", "chrono_crate?/alloc", "hex_crate?/alloc", "serde_json?/alloc", "time_0_3_crate?/alloc"]
-base64 = ["base64_crate", "alloc"]
-chrono = ["chrono_crate"]
-guide = ["doc-comment", "macros", "std"]
-hex = ["hex_crate", "alloc"]
-indexmap = ["indexmap_crate", "alloc"]
-json = ["serde_json", "alloc"]
-macros = ["serde_with_macros"]
-std = ["alloc", "chrono_crate?/clock", "chrono_crate?/std", "indexmap_crate?/std", "serde/std", "time_0_3_crate?/std", "time_0_3_crate?/serde-well-known"]
-time_0_3 = ["time_0_3_crate"]
+alloc = [
+    "serde/alloc",
+
+    "base64?/alloc",
+    "chrono?/alloc",
+    "hex?/alloc",
+    "serde_json?/alloc",
+    "time_0_3?/alloc",
+]
+std = [
+    "alloc",
+    "serde/std",
+
+    # Enables `Local` type
+    "chrono?/clock",
+    "chrono?/std",
+    "indexmap?/std",
+    "time_0_3?/serde-well-known",
+    "time_0_3?/std",
+]
+
+base64 = ["dep:base64", "alloc"]
+chrono = ["dep:chrono"]
+guide = ["dep:doc-comment", "macros", "std"]
+hex = ["dep:hex", "alloc"]
+indexmap = ["dep:indexmap", "alloc"]
+json = ["dep:serde_json", "alloc"]
+macros = ["dep:serde_with_macros"]
+time_0_3 = ["dep:time_0_3"]
 
 # When adding new optional dependencies update the documentation in feature-flags.md
 [dependencies]
-base64_crate = {package = "base64", version = "0.13.0", optional = true, default-features = false}
-chrono_crate = {package = "chrono", version = "0.4.1", optional = true, default-features = false, features = ["serde"]}
+base64 = {version = "0.13.0", optional = true, default-features = false}
+chrono = {version = "0.4.1", optional = true, default-features = false, features = ["serde"]}
 doc-comment = {version = "0.3.3", optional = true}
-hex_crate = {package = "hex", version = "0.4.2", optional = true, default-features = false}
-indexmap_crate = {package = "indexmap", version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
+hex = {version = "0.4.2", optional = true, default-features = false}
+indexmap = {version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
 serde = {version = "1.0.122", default-features = false, features = ["derive"]}
 serde_json = {version = "1.0.1", optional = true, default-features = false}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
-time_0_3_crate = {package = "time", version = "~0.3", optional = true, default-features = false}
+time_0_3 = {package = "time", version = "~0.3", optional = true, default-features = false}
 
 [dev-dependencies]
 expect-test = "1.3.0"
