--- a/serde_with/Cargo.toml
+++ b/serde_with/Cargo.toml
@@ -42,7 +42,7 @@ std = [
     # Enables `Local` type
     "chrono_0_4?/clock",
     "chrono_0_4?/std",
-    "indexmap?/std",
+    "indexmap_1?/std",
     "time_0_3?/serde-well-known",
     "time_0_3?/std",
 ]
@@ -52,7 +52,8 @@ chrono = ["chrono_0_4"]
 chrono_0_4 = ["dep:chrono_0_4"]
 guide = ["dep:doc-comment", "macros", "std"]
 hex = ["dep:hex", "alloc"]
-indexmap = ["dep:indexmap", "alloc"]
+indexmap = ["indexmap_1"]
+indexmap_1 = ["dep:indexmap_1", "alloc"]
 json = ["dep:serde_json", "alloc"]
 macros = ["dep:serde_with_macros"]
 time_0_3 = ["dep:time_0_3"]
@@ -63,7 +64,7 @@ base64 = {version = "0.13.0", optional = true, default-features = false}
 chrono_0_4 = {package = "chrono", version = "0.4.10", optional = true, default-features = false, features = ["serde"]}
 doc-comment = {version = "0.3.3", optional = true}
 hex = {version = "0.4.3", optional = true, default-features = false}
-indexmap = {version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
+indexmap_1 = {package = "indexmap", version = "1.8", optional = true, default-features = false, features = ["serde-1"]}
 serde = {version = "1.0.122", default-features = false, features = ["derive"]}
 serde_json = {version = "1.0.45", optional = true, default-features = false}
 serde_with_macros = {path = "../serde_with_macros", version = "1.5.2", optional = true}
@@ -101,9 +102,9 @@ path = "tests/hex.rs"
 required-features = ["hex", "macros"]
 
 [[test]]
-name = "indexmap"
-path = "tests/indexmap.rs"
-required-features = ["indexmap", "macros"]
+name = "indexmap_1"
+path = "tests/indexmap_1.rs"
+required-features = ["indexmap_1", "macros"]
 
 [[test]]
 name = "json"
