--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Jonas Bushart"]
 name = "serde_with_macros"
 rust-version = "1.60"
-version = "1.5.2"
+version = "2.0.0-rc.0"
 
 categories = ["encoding"]
 description = "proc-macro library for serde_with"
