--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -1,10 +1,6 @@
 [advisories]
-ignore = [
-    # chrono: Potential segfault in `localtime_r` invocations
-    # chrono is an optional depenency, so we can ignore the warning.
-    # Right now there is no safe version of chrono to upgrade to.
-    "RUSTSEC-2020-0159",
-]
+#ignore = [
+#]
 # warn for categories of informational advisories
 informational_warnings = [
     "unmaintained",
