--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -23,6 +23,4 @@ jobs:
       issues: write
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/audit-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions-rust-lang/audit@v1
