Start work on an `apply` attribute #85
This `apply` proc-macro takes a list of type patterns and a list of
attributes for each. On each field where the type matches, the list of
attributes will be added to the existing field attributes.

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -43,6 +43,7 @@ features = [
 version = "1.0.3"
 
 [dev-dependencies]
+expect-test = "1.4.0"
 pretty_assertions = "1.0.0"
 rustversion = "1.0.0"
 serde = {version = "1.0.75", features = ["derive"]}
